# Agente-Ventas-Brenda-Whatsapp

./: -la  grep -E (h herokuhow [0-9a-f]+info$)  .env.example  .gitignore  ANALISIS_EJECUCION_MEJORAS_JULIO_2025.md  BUYER_PERSONAS_ADAPTATION.md  CLAUDE.md  COMMIT_MESSAGE.md  CURSOR.md  DEBUG_SYSTEM_GUIDE.md  DOCUMENTATION_INDEX.md  ESTADO_ACTUAL_COMPLETO.md  ESTADO_INTEGRACION_FASES_1_2.md  ESTADO_PROYECTO_ACTUAL.md  ESTADO_VARIABLES_ENTORNO.md  FASE_1_ANTI_INVENTOS_CLAUDE_DOC.md  FASE_2_PERSONALIZACION_CLAUDE_DOC.md  GUIA_PRUEBAS_INTEGRADAS.md  GUIA_PRUEBAS_SISTEMA_BONOS.md  HEROKU_DEPLOYMENT_GUIDE.md  HEROKU_SETUP_2025.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  LEGACY_INTEGRATION_COMPLETE.md  LICENSE  LIMPEZA_PROYECTO_COMPLETADA.md  PLAN_FLUJO_ANUNCIOS_WHATSAPP.md  PLAN_INTEGRACION_FLUJOS.md  PROJECT_OVERVIEW_ISRAEL.md  PROMPTS_SYSTEM_GUIDE.md  PRUEBAS_WHATSAPP_RAPIDAS.md  Procfile  README.md  README_THREADS_INTEGRATION.md  RESUMEN_CAMBIOS_FINAL.md  RESUMEN_DESPLIEGUE_2025.md  RESUMEN_EJECUTIVO_MERGE.md  RESUMEN_FASES_1_Y_2_COMPLETADAS.md  RESUMEN_IMPLEMENTACION_ANTI_INVENTOS.md  RESUMEN_IMPLEMENTACION_FASE_4.md  ROADMAP_POST_MERGE.md  (+105 more)
app/: config.py
app/application/usecases/: __init__.py  advanced_sales_system_use_case.py  advisor_referral_use_case.py  analyze_message_intent.py  anti_hallucination_use_case.py  bonus_activation_use_case.py  contact_flow_use_case.py  course_announcement_use_case.py  detect_ad_hashtags_use_case.py  diagnostic_tools_use_case.py  dynamic_course_info_provider.py  dynamic_template_integration.py  emotion_detection_use_case.py  extract_user_info_use_case.py  faq_flow_use_case.py  generate_intelligent_response.py  hyper_personalization_use_case.py  manage_user_memory.py  map_campaign_course_use_case.py  personalize_response_use_case.py  predictive_analytics_use_case.py  privacy_flow_use_case.py  proactive_responses_use_case.py  process_ad_flow_use_case.py  process_incoming_message.py  purchase_bonus_use_case.py  query_course_information.py  send_hello_world.py  smart_suggestions_use_case.py  threads_integration_use_case.py  tool_activation_use_case.py  user_experience_rating_use_case.py  validate_response_use_case.py  welcome_flow_use_case.py
app/config/: __init__.py  campaign_config.py  course_catalog.py  intelligent_agent_config.py  settings.py
app/domain/entities/: advertisement.py  campaign.py  contact_request.py  course.py  hashtag.py  message.py  user.py
app/infrastructure/campaign/: ad_flow_processor.py  campaign_mapper.py  hashtag_detector.py  metrics_tracker.py
app/infrastructure/contact/: contact_processor.py
app/infrastructure/database/: DATABASE_DOCUMENTATION.md  __init__.py  client.py  db_schema_condensed.md  elements_url_rows.sql  elements_url_rows.sqlZone.Identifier  (+1 more)
app/templates/: ad_flow_templates.py  advisor_referral_templates.py  contact_flow_templates.py  course_announcement_templates.py  faq_templates.py  privacy_flow_templates.py
config/: README.md  twilio_settings.py
core/: README.md  intent_analyzer.py  whatsapp_agent.py
docs/: CLEAN_ARCHITECTURE.md  DATABASE_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  NEW_FEATURES.md  OPENAI_ASSISTANT_TOOLS_CONFIG.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  WHATSAPP_MIGRATION.md
handlers/: whatsapp_webhook.py
legacy/: README.md  funciones_futuras_importantes.py  funciones_operativas_completas.py  hola_mundo_twilo.py  prompts_agente_operativos.py  prompts_funciones_futuras.py
memory/: README.md  lead_memory.py
prompts/: README.md  agent_prompts.py  anti_hallucination_prompts.py  personalization_prompts.py  tool_prompts.py
scripts/: 2025_08_oa_threads_map_migration.sql  insert_course_descriptions.sql
services/: README.md  twilio_service.py
telegram_migration/: README.md  extracted_system_prompt.md  implementation_plan.md  implementation_results.md  progress_log.md  whatsapp_adapted_prompt.md
telegram_migration/findings/: critical_differences.md
tests/: test_anti_hallucination.py  test_course_description_simple.py  test_course_repository.py  test_detect_intent.py  test_generate_intelligent_response.py  test_post_purchase_bonuses.py  test_tool_db.py
(+14 files in other folders)
